<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>org.hmx</groupId>
	<artifactId>scitos</artifactId>
	<version>2.3.1</version>
	<packaging>pom</packaging>
	<name>scitos</name>
	<description>parent project of SciToS</description>
	<url>https://github.com/scientific-tool-set/scitos</url>
	<organization>
		<name>HermeneutiX.org</name>
	</organization>
	<issueManagement>
		<url>https://github.com/scientific-tool-set/scitos/issues</url>
	</issueManagement>

	<modules>
		<module>scitos.domain</module>
		<module>scitos.core</module>
		<module>scitos.view</module>
		<module>scitos.ais</module>
		<module>scitos.hmx</module>
		<module>scitos.distribution</module>
	</modules>

    <scm>
        <connection>scm:git:ssh://git@github.com/scientific-tool-set/scitos.git</connection>
        <developerConnection>scm:git:ssh://git@github.com/scientific-tool-set/scitos.git</developerConnection>
        <url>https://github.com/scientific-tool-set/scitos</url>
        <tag>v2.3.1</tag>
    </scm>

	<properties>
		<scitos.version>2.3.1</scitos.version>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
	</properties>
	<build>
		<pluginManagement>
			<plugins>
				<plugin>
					<artifactId>maven-compiler-plugin</artifactId>
					<version>3.8.1</version>
					<configuration>
						<source>1.9</source>
						<target>1.9</target>
					</configuration>
				</plugin>
				<plugin>
					<artifactId>maven-checkstyle-plugin</artifactId>
					<version>3.1.1</version>
					<executions>
						<execution>
							<configuration>
								<configLocation>checkstyle.xml</configLocation>
                                <sourceDirectories>${project.build.sourceDirectory}</sourceDirectories>
								<encoding>UTF-8</encoding>
								<consoleOutput>true</consoleOutput>
								<logViolationsToConsole>true</logViolationsToConsole>
								<linkXRef>false</linkXRef>
							</configuration>
							<goals>
								<goal>check</goal>
							</goals>
						</execution>
					</executions>
				</plugin>
				<plugin>
					<artifactId>maven-assembly-plugin</artifactId>
					<version>2.6</version>
				</plugin>
				<plugin>
					<artifactId>maven-surefire-plugin</artifactId>
					<version>2.22.2</version>
				</plugin>
				<plugin>
					<artifactId>maven-jar-plugin</artifactId>
					<version>3.2.0</version>
					<inherited>true</inherited>
					<configuration>
						<archive>
							<addMavenDescriptor>false</addMavenDescriptor>
						</archive>
					</configuration>
				</plugin>
                <plugin>
                    <artifactId>maven-release-plugin</artifactId>
                    <version>2.5.3</version>
                </plugin>
			</plugins>
		</pluginManagement>
	</build>
	<dependencies>
		<dependency>
			<!-- Dependency Injection -->
			<groupId>com.squareup.dagger</groupId>
			<artifactId>dagger</artifactId>
			<version>1.2.2</version>
		</dependency>
		<dependency>
			<groupId>com.squareup.dagger</groupId>
			<artifactId>dagger-compiler</artifactId>
			<version>1.2.2</version>
			<optional>true</optional>
		</dependency>
		<dependency>
			<groupId>junit</groupId>
			<artifactId>junit</artifactId>
			<version>4.12</version>
			<scope>test</scope>
		</dependency>
		<!-- <dependency> <groupId>org.mockito</groupId> <artifactId>mockito-core</artifactId>
			<version>1.10.19</version> <scope>test</scope> </dependency> -->
	</dependencies>
	<dependencyManagement>
		<dependencies>
			<!-- lib: including TreeTable view component -->
			<dependency>
				<groupId>org.swinglabs.swingx</groupId>
				<artifactId>swingx-core</artifactId>
				<version>1.6.5-1</version>
			</dependency>
			<!-- lib: DesignGridLayout for arranging views -->
			<dependency>
			    <groupId>net.java.dev.designgridlayout</groupId>
			    <artifactId>designgridlayout</artifactId>
			    <version>1.11</version>
			</dependency>
			<!-- lib: Spreadsheet Export -->
			<dependency>
				<groupId>org.jopendocument</groupId>
				<artifactId>jOpenDocument</artifactId>
				<version>1.3</version>
			</dependency>
			<!-- test-lib: AssertJ Swing for functional GUI testing -->
			<dependency>
				<groupId>org.assertj</groupId>
				<artifactId>assertj-swing-junit</artifactId>
				<version>1.2.0</version>
				<scope>test</scope>
			</dependency>
			<dependency>
			    <groupId>com.thedeanda</groupId>
			    <artifactId>lorem</artifactId>
			    <version>2.0</version>
				<scope>test</scope>
			</dependency>
			<!-- core SciToS projects -->
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.domain</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.core</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.view</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.view</artifactId>
				<version>${scitos.version}</version>
				<type>test-jar</type>
			</dependency>
			<!-- SciToS module: AIS -->
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.ais.domain</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.ais.core</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.ais.view</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<!-- SciToS module: HmX -->
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.hmx.domain</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.hmx.core</artifactId>
				<version>${scitos.version}</version>
			</dependency>
			<dependency>
				<groupId>org.hmx</groupId>
				<artifactId>scitos.hmx.view</artifactId>
				<version>${scitos.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>
</project>
